--- a/main/Splash.html
+++ b/main/Splash.html
@@ -6,6 +6,11 @@
     <title>Splash</title>
 </head>
 <body>
-
+    <dev>
+        <h1>Our Mission</h1>
+        <p></p>
+    </dev>
+    <h1>Our Mission</h1>
+    <p></p>
 </body>
 </html>
