--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>CW</title>
 </head>
 <body>
-    <h1>Still working asfwreqw l khlllkhj rwa!!!!!!!h1>
-    <p>sdkajfhsahfsadh kja kjasdh fsa </p>
+    <ul>
+        <li><a href="LINK to your page"></a></li>
+        <li><a href="/main/Splash.html">Splash</a></li>
+    </ul>
 </body>
 </html>
