--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
         <li><a href="LINK to your page"></a></li>
-        <li><a href="/main/Splash.html">Splash</a></li>
+        <li><a href="Splash.html">Splash</a></li>
     </ul>
 </body>
 </html>
