--- a/Splash.html
+++ b/Splash.html
@@ -14,7 +14,8 @@
         </dev>
     </dev>
     
-    <dev class="fish">
+    <dev class="developers">
+        <h1>Our Developers</h1>
 
     </dev>
     <p></p>
