--- a/Splash.html
+++ b/Splash.html
@@ -16,8 +16,10 @@
     
     <dev class="developers">
         <h1>Our Developers</h1>
-
+        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile1">
+        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile2">
+        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile3">
+        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile4">
     </dev>
-    <p></p>
 </body>
 </html>
