--- a/Splash.html
+++ b/Splash.html
@@ -7,19 +7,21 @@
     <title>Splash</title>
 </head>
 <body>
-    <dev class="mission-box">
-        <dev class="mission">
+    <div class="mission-box">
+        <div class="mission">
             <h1>Our Mission</h1>
             <p>At Life Below Water, we are dedicated to protecting and preserving the world's oceans, seas, and marine ecosystems. Through advocacy, education, and promotion of sustainable practices, we strive to combat the threats of overfishing, pollution, and climate change on our vital marine environments. Our goal is to raise awareness and inspire action towards the conservation and sustainable use of the rich biodiversity and resources that lie beneath the waves, ensuring a healthy and resilient ocean for generations to come.</p>
-        </dev>
-    </dev>
+        </div>
+    </div>
     
-    <dev class="developers">
+    <div class="developers">
         <h1>Our Developers</h1>
-        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile1">
-        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile2">
-        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile3">
-        <img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile4">
-    </dev>
+        <div class="profile_image">
+            <div><img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile1"><p>Yohan Joshua</p></div>
+            <div><img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile2"><p>Vihandu Ransaka</p></div>
+            <div><img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile3"><p>Senali Jayarathne</p></div>
+            <div><img src="/materials/user-person-profile-block-account-circle-svgrepo-com.svg" alt="Profile1" class="profile4"><p>Prashath fernando</p></div>
+        </div>
+    </div>
 </body>
 </html>
