--- a/Splash.html
+++ b/Splash.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/Splash.css">
     <title>Splash</title>
+    <script type="text/javascript">
+        setTimeout(function() {
+          window.location.href = "/home";
+        }, 4000);
+      </script>
 </head>
 <body>
     <div class="mission-box">
