--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="mission-box">
         <div class="mission">
-            <h1>Our Mission oihas</h1>
+            <h1>Our Mission</h1>
             <p>At Life Below Water, we are dedicated to protecting and preserving the world's oceans, seas, and marine ecosystems. Through advocacy, education, and promotion of sustainable practices, we strive to combat the threats of overfishing, pollution, and climate change on our vital marine environments. Our goal is to raise awareness and inspire action towards the conservation and sustainable use of the rich biodiversity and resources that lie beneath the waves, ensuring a healthy and resilient ocean for generations to come.</p>
         </div>
     </div>
