--- a/Life below water/indexhome.html
+++ b/Life below water/indexhome.html
@@ -17,23 +17,25 @@
     <!--Menu Icon-->
     <i class='bx bx-menu'id="menu-icon"></i>
     <!--Links-->
+    <nav>
     <ul Class="navbar">
         <li><a href="#home">Home</a></a></li>
         <li><a href="#about">About us</a></a></li>
-        <li><a href="#product">Products</a></a></li>
-        <li><a href="#coustomer">Customers</a></a></li>
+        <li><a href="#sitemap">Site Map</a></a></li>
+        <li><a href="#gallery">Gallery</a></a></li>
+        <li><a href="#user">User Profile</a></a></li>
     </ul>
-
+    <div class="search-box">
+        <form>
+        <input type="search" placeholder="search Here......">
+        </form>
+     </div>  
+    </nav>
     <!--Icons-->
-    <div>class="header-icon">
+    <div class="header-icon">
     <i class='bx bx-cart-alt'></i>
     <i class='bx bx-search-alt-2' id="Search-icon"></i>
     </div>
-
-    <!--Search box-->
-  <div class="search-box">
-     <input type="search" placeholder="search Here......">
-  </div>  
 </header>
 <!--Home-->
 <section class="home" id="home">
@@ -46,6 +48,22 @@
     <div class="home-img">
         <img src="main img.jpg" alt="">
     </div>
+    <footer>
+        <div class="editor">
+            <a href="#">Page editor : Vihandu Ransaka</a>
+        </div>
+        <div class="footernavbar">
+            <ul>
+                <li><a href="homepage.html">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Site Map</a></li>
+                <li><a href="#">Gallery</a></li>
+            </ul>
+        </div>
+        <div class="contentfooter">
+            <p>Copyright &copy; 2024 WILDMART. All rights reserved</p>
+        </div>
+    </footer>
 </section>
 
     <script src = "script.js"></script>
