--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="4; URL=/home.html">
+    <meta http-equiv="refresh" content="4; URL=https://ycbro.github.io/Web_CW/home.html">
     <link rel="stylesheet" href="/css/Splash.css">
     <title>Splash</title>
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
         setTimeout(function() {
-          window.location.href = "home.html";
+          window.location.href = "https://ycbro.github.io/Web_CW/home.html";
         }, 4000);
-      </script> -->
+      </script>
 </head>
 <body>
     <div class="mission-box">
